# gis-skill

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RUNBOOK.md  geosql.skill  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.githooks/: pre-push
evals/: RUNBOOK.md  evals.json  run.py
evals/results/latest/: benchmark.json
evals/results/latest/berlin-create-map/: assertion_prompt.txt  assertion_result_event.json  generation_result_event.json  grading.json  model_messages.json  output.md  prompt.txt
evals/results/latest/london-boroughs/: assertion_prompt.txt  assertion_result_event.json  generation_result_event.json  grading.json  model_messages.json  output.md  prompt.txt
evals/results/latest/paris-boundaries/: assertion_prompt.txt  assertion_result_event.json  generation_result_event.json  grading.json  model_messages.json  output.md  prompt.txt
geosql/: SKILL.md  __init__.py  cli.py
geosql/references/: map-styling.md
giskill/: SKILL.md  __init__.py  cli.py
scripts/: build_skill_package.py  install_hooks.sh  pre_push_main_release.py  release_and_push.sh
skills/geosql/: SKILL.md
