[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "giskill"
version = "0.1.0"
description = "Create maps and answer questions from your data."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{name = "Dekart XYZ"}]

[project.scripts]
giskill = "giskill.cli:main"
