[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geosql"
version = "0.2.0"
description = "Install GeoSQL instructions into local AI CLIs."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{name = "Dekart XYZ"}]

[project.scripts]
geosql = "geosql.cli:main"

[tool.hatch.build.targets.wheel]
include = [
  "/geosql/**",
]
