[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geosql"
version = "0.9.0"
description = "Install GeoSQL instructions into local AI CLIs."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{name = "Dekart XYZ"}]

[project.scripts]
geosql = "geosql.cli:main"

[tool.hatch.build.targets.wheel]
include = [
  "/geosql/**",
]

# Skill files live at skills/geosql/ (Claude Code plugin convention).
# Ship them inside the wheel under geosql/ so the installed CLI reads from
# its own package dir and editable installs fall back to skills/geosql/.
[tool.hatch.build.targets.wheel.force-include]
"skills/geosql/SKILL.md" = "geosql/SKILL.md"
"skills/geosql/references" = "geosql/references"
